--- a/config.toml
+++ b/config.toml
@@ -20,11 +20,11 @@ name = "About"
 url = "/about/"
 weight = 1
 
-[[menu.main]]
-identifier = "tags"
-name = "Tags"
-url = "/tags/"
-weight = 2
+# [[menu.main]]
+# identifier = "tags"
+# name = "Tags"
+# url = "/tags/"
+# weight = 2
 
 [[menu.main]]
 name = "Archives"
